objects/AMASellingSupportExpenseLineItem__c.object
<CustomObject>
    <description>Expense Line Items. Child to the Expense object.</description>
    <fields>
        <fullName>Amount_Reimbursed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount that is determined by the expense sub category. This amount is rolled up to the parent expense.</description>
        <inlineHelpText>The amount that is determined by the expense sub category. This amount is rolled up to the parent expense.</inlineHelpText>
        <label>Amount Reimbursed ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Expense line item approval status</description>
        <label>Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                    <default>true</default>
                    <label>Saved</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Sales Manager (BB Approver)</description>
        <label>Area Sales Manager (BB Approver)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMA_Selling_Support_Expense_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BB_Approver_Sales_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BB Approver Sales Specialist (via Account)</description>
        <label>Sales Specialist (BB Approver)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AMA_Selling_Support_Expense_Line_Item1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BB_Description__c</fullName>
        <description>Taking Description from Custom Setting BusinessBuilderRules</description>
        <label>BB Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CloneExpensefromCreatedByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Clone Expense from Created By User</description>
        <label>Clone Expense from Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reimbursement_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloned_Expense_Line_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the old Expense Line Item Id.</description>
        <label>Cloned Expense Line From</label>
        <referenceTo>AMASellingSupportExpenseLineItem__c</referenceTo>
        <relationshipLabel>Reimbursement Request Line Items</relationshipLabel>
        <relationshipName>Reimbursement_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date expense was incurred.</description>
        <inlineHelpText>Date expense was incurred.</inlineHelpText>
        <label>(delete) Date of Expense</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerFacingReasonforReworkMessage__c</fullName>
        <description>Message that is displayed to the Dealer for Rework line items</description>
        <inlineHelpText>Message that is displayed to the Dealer for Rework line items</inlineHelpText>
        <label>Dealer Facing Reason for Rework Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Reimbursement Line Item</description>
        <inlineHelpText>Description of Reimbursement Line Item</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExpenseAmount__c</fullName>
        <description>Amount Reimbursed</description>
        <inlineHelpText>Amount Reimbursed (Reimbursable Amount is calculated upon saving this line item)</inlineHelpText>
        <label>Reimbursement Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>Parent reimbursement request record that is submitted for approval for reimbursement.</description>
        <inlineHelpText>Parent reimbursement request record that is submitted for approval for reimbursement.</inlineHelpText>
        <label>Reimbursement</label>
        <referenceTo>AMASellingSupportExpense__c</referenceTo>
        <relationshipLabel>Reimbursement Request Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Line Item Image</description>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JDEPARTNUMBER__c</fullName>
        <description>Part number based on expense SubCategory</description>
        <inlineHelpText>Part number based on expense SubCategory</inlineHelpText>
        <label>JDE PART NUMBER</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Reimbursement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_Multiplier__c</fullName>
        <description>Number of same line items when reimbursement is calculated by quantity x&apos;s $ dollar amount instead of %  (originally used for Checkpoint)   Relates to sub categories.</description>
        <inlineHelpText>Number of same line items when reimbursement is calculated by quantity x&apos;s $ dollar amount instead of %</inlineHelpText>
        <label>Quantity Multiplier</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonforRework__c</fullName>
        <description>Reject reason, based on the Line Item Approval Status</description>
        <inlineHelpText>Reject reason, based on the Line Item Approval Status</inlineHelpText>
        <label>Reason for Rework</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Approval_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Expense Does Not Qualify</fullName>
                </value>
                <value>
                    <fullName>Incorrect Receipt(s)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Subcategory</fullName>
                </value>
                <value>
                    <fullName>Missing Receipt(s)</fullName>
                </value>
                <value>
                    <fullName>Previously Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement_Category__c</fullName>
        <description>Reimbursement Category (related controlling field to subcategory)</description>
        <inlineHelpText>The category for the Reimbursement Request Line Item</inlineHelpText>
        <label>Reimbursement Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
                <value>
                    <fullName>Events and Marketing</fullName>
                </value>
                <value>
                    <fullName>Feeding Trial</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Loyalty Program</fullName>
                </value>
                <value>
                    <fullName>Balance Adjustment</fullName>
                    <isActive>false</isActive>
                    <label>Balance Adjustment</label>
                </value>
                <value>
                    <fullName>Trials</fullName>
                    <isActive>false</isActive>
                    <label>Trials</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement_Percentage__c</fullName>
        <description>Calculated based on subcategory</description>
        <inlineHelpText>Calculated based on subcategory</inlineHelpText>
        <label>Reimbursment Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Sub_category__c</fullName>
        <description>Subcategory for Reimbursement Request (related to Category field)</description>
        <inlineHelpText>Description of the Reimbursement Request Line Item</inlineHelpText>
        <label>Reimbursement Sub-category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reimbursement_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adv and Mktg Agency Fees 2017</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Advertising and Marketing Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Animal Care Workshop</fullName>
                </value>
                <value>
                    <fullName>Branded Wearables and Premiums</fullName>
                </value>
                <value>
                    <fullName>Branded Wearables and Premiums 2017</fullName>
                </value>
                <value>
                    <fullName>Calf and Heifer VIP</fullName>
                </value>
                <value>
                    <fullName>Cattle Mineral Meeting</fullName>
                </value>
                <value>
                    <fullName>Check-R-Board Days</fullName>
                </value>
                <value>
                    <fullName>Chick Days</fullName>
                </value>
                <value>
                    <fullName>Customer Appreciation Event</fullName>
                </value>
                <value>
                    <fullName>Dairy/Beef Cattle Vet Conference</fullName>
                </value>
                <value>
                    <fullName>Dealer Differentiation Conference</fullName>
                </value>
                <value>
                    <fullName>Dealer Signage</fullName>
                </value>
                <value>
                    <fullName>eStore Merchandising</fullName>
                </value>
                <value>
                    <fullName>Farm/Ranch Selling Events</fullName>
                </value>
                <value>
                    <fullName>FEED/HERD Sales Training</fullName>
                </value>
                <value>
                    <fullName>Feeding Trial</fullName>
                </value>
                <value>
                    <fullName>Feedlot Cattle VIP</fullName>
                </value>
                <value>
                    <fullName>Flocktober</fullName>
                </value>
                <value>
                    <fullName>Genetic Supplier VIP</fullName>
                </value>
                <value>
                    <fullName>Great Starts</fullName>
                </value>
                <value>
                    <fullName>Horse VIP</fullName>
                </value>
                <value>
                    <fullName>HOW Horse Owners Workshop</fullName>
                </value>
                <value>
                    <fullName>Local Training</fullName>
                </value>
                <value>
                    <fullName>Loyalty Cattle</fullName>
                </value>
                <value>
                    <fullName>Loyalty Deer</fullName>
                </value>
                <value>
                    <fullName>Loyalty Honor Show Chow</fullName>
                </value>
                <value>
                    <fullName>Loyalty Horse</fullName>
                </value>
                <value>
                    <fullName>Loyalty Poultry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Spend__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Reimbursement Amount Before % applied</description>
        <inlineHelpText>Reimbursement Amount Before % applied</inlineHelpText>
        <label>Request Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Reimbursement Request Line Item</label>
    <nameField>
        <displayFormat>RLI{0000}</displayFormat>
        <label>Reimbursement Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursement Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Expense Line Item</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASM_and_SS_Request_Amount</fullName>
        <active>true</active>
        <description>Sales Specialist and Area Sales Managers cannot update the Request Amount</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Standard&quot;,
OR(
$Profile.Name = &quot;Sales Specialist&quot;,
$Profile.Name = &quot;Area Sales Manager&quot;,
$Profile.Name = &quot;Inside Sales User&quot;),
ISCHANGED(Total_Spend__c))</errorConditionFormula>
        <errorDisplayField>Total_Spend__c</errorDisplayField>
        <errorMessage>Unable to update Request Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASM_and_SS_Status</fullName>
        <active>true</active>
        <description>Sales Specialist and Area Sales Managers can only select &apos;In Progress&apos; or &apos;Rework&apos; for the Line Approval Status</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Standard&quot;,
OR(
$Profile.Name = &quot;Sales Specialist&quot;,
$Profile.Name = &quot;Area Sales Manager&quot;,
$Profile.Name = &quot;Insides Sales User&quot;),
NOT(ISPICKVAL(Approval_Status__c, &apos;In Progress&apos;)),
NOT(ISPICKVAL(Approval_Status__c, &apos;Rework&apos;)))</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Invalid Status. Select either &apos;In Progress&apos; or &apos;Rework&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Balance_Adjustment_Line_Edit_Validation</fullName>
        <active>true</active>
        <description>Only System Admins and Sales Ops users can edit Balance Adjustments Line Items.</description>
        <errorConditionFormula>Expense__r.RecordType.DeveloperName = &apos;Balance_Adjustment&apos; &amp;&amp; 
$Profile.Name != &apos;Sales Operations&apos; &amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorMessage>Only Approved Users can edit Balance Adjustment Line Items</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReWork_Reason_Required</fullName>
        <active>true</active>
        <description>If line item status is &apos;Rework&apos;, reason code is required.</description>
        <errorConditionFormula>ISPICKVAL( Approval_Status__c , &apos;Rework&apos;) &amp;&amp;
 ISPICKVAL( ReasonforRework__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>Rejection reason required for Rework line item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestAmountMoreThanAvailableBalance</fullName>
        <active>false</active>
        <description>Total Reimbursement Amount can not exceed Available Balance</description>
        <errorConditionFormula>ExpenseAmount__c &gt; Expense__r.Selling_Support_Program_Year__r.Available_Balance__c</errorConditionFormula>
        <errorMessage>Total Reimbursement Amount can not exceed Available Balance</errorMessage>
    </validationRules>
</CustomObject>